--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,10 @@ flutter_native_splash:
   hive: ^2.2.3   
   hive_flutter: ^1.1.0
   uuid: ^4.5.1
- 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  cloud_firestore: ^6.1.0
+  firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
+  dartz: ^0.10.1  .
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
